fixed small bugs, updated add item tick position when card clicked and moved to proper css file, made packer name their fullname on pack showpage banner and increased font size, increased opacity on banner to highlight white text and add contrast, updated flash messages

--- a/app/assets/stylesheets/pages/_pack-show.scss
+++ b/app/assets/stylesheets/pages/_pack-show.scss
@@ -83,3 +83,7 @@
   position: relative;
   left: 270px;
 }
+
+.packername {
+  font-size: 32px;
+}
